--- a/_posts/2010-09-12-xor.md
+++ b/_posts/2010-09-12-xor.md
@@ -3,7 +3,7 @@ title: "We can't keep it a secret any longer"
 layout: post
 ---
 
-> [XOR] in face, at one point, was a classified thing. I mean it was used so often in code breaking. I went to a conference in Los Alamos in 1986 where somebody wrote the truth table for XOR on the blackboard and the security man erased it immediately.
+> [XOR] in fact, at one point, was a classified thing. I mean it was used so often in code breaking. I went to a conference in Los Alamos in 1986 where somebody wrote the truth table for XOR on the blackboard and the security man erased it immediately.
 >
 > D. Knuth, [Platologic Computation](http://scpd.stanford.edu/knuth/index.jsp)
 
