--- a/_posts/2010-09-12-xor.md
+++ b/_posts/2010-09-12-xor.md
@@ -1,9 +1,10 @@
 ---
-title: "We can't keep it a secret any longer"
 layout: post
+title: "We can't keep it a secret any longer"
+type: link
+link: http://myvideos.stanford.edu/player/slplayer.aspx?coll=ea60314a-53b3-4be2-8552-dcf190ca0c0b&co=7e73f746-a038-43da-9998-451fc1901b83&o=true
 ---
 
-> [XOR] in fact, at one point, was a classified thing. I mean it was used so often in code breaking. I went to a conference in Los Alamos in 1986 where somebody wrote the truth table for XOR on the blackboard and the security man erased it immediately.
->
-> D. Knuth, [Platologic Computation](http://scpd.stanford.edu/knuth/index.jsp)
+Donal Knuth in a 2006 lecture, "Platologic Computation":
 
+> [XOR] in fact, at one point, was a classified thing. I mean it was used so often in code breaking. I went to a conference in Los Alamos in 1976 where somebody wrote the truth table for XOR on the blackboard and the security man erased it immediately.
