--- a/_posts/2012-10-15-mucked-up.md
+++ b/_posts/2012-10-15-mucked-up.md
@@ -1,6 +1,7 @@
 ---
 title: DNS Record Bankruptcy
 layout: post
+summary: Cool URIs don't change, and this blog has never been all that cool.
 ---
 
 XOR has finished its move to a new domain: xor.lonnen.com
