--- a/_posts/2013-09-17-interns.md
+++ b/_posts/2013-09-17-interns.md
@@ -1,6 +1,7 @@
 ---
 title: "2013 Web Dev Intern Recap"
 layout: post
+summary: In 2013 we hosted five webdev interns at Mozilla headquarters. Here's how we spent our time together.
 ---
 
 With the 2013 intern season winding down, we'd like to highlight some of the intern contributions to Mozilla Web Dev projects. This year five interns from four countries spent a few months at our Mountain View office building amazing things:
