add static pages
Add about, missives, speaking pages. Adds post types and some other supporting markup.

--- a/_posts/2012-10-15-mucked-up.md
+++ b/_posts/2012-10-15-mucked-up.md
@@ -1,7 +1,8 @@
 ---
 title: DNS Record Bankruptcy
-layout: post
 summary: Cool URIs don't change, and this blog has never been all that cool.
+layout: post
+type: post
 ---
 
 XOR has finished its move to a new domain: xor.lonnen.com
